[project]
name = "git-uptake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.14.13",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "polars>=1.32.0",
    "pygithub>=2.6.1",
    "python-dotenv[cli]>=1.1.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
